--- a/app/global.css
+++ b/app/global.css
@@ -1,35 +1,91 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url(https://p.typekit.net/p.css?s=1&k=bwb4cjf&ht=tk&f=24539.24540.24547.24548&a=12465986&app=typekit&e=css);
 
 @layer components {
+  /* TYPOGRAPHY */
+  /* Variants */
+  .TypographyFootnote {
+    @apply text-xs font-normal;
+  }
+  .TypographyCaption {
+    @apply text-xs font-bold uppercase;
+  }
+  .TypographyBody {
+    @apply text-md font-normal;
+  }
+  .TypographyHeading {
+    @apply text-md font-bold;
+  }
+  .TypographySubtitle {
+    @apply text-sm font-medium;
+  }
+  .TypographyTitle {
+    @apply text-lg font-bold;
+  }
+  .TypographyHeadline {
+    @apply text-xl font-bold;
+  }
+  /* Colors */
+  .TypographyBehance {
+    @apply text-blue-600;
+  }
+  .TypographyLinkedIn {
+    @apply text-sky-600;
+  }
+  .TypographyGitHub {
+    @apply text-slate-950 dark:text-slate-50;
+  }
+  .TypographyMedium {
+    @apply text-zinc-800 dark:text-zinc-200;
+  }
+  .TypographyMain {
+    @apply text-amber-500;
+  }
+  .TypographyPrimary {
+    @apply text-amber-50;
+  }
+  .TypographySecondary {
+    @apply text-amber-50/60;
+  }
+  /* BUTTON BASE */
+  /* Root */
+  .ButtonBase {
+    @apply TypographyCaption inline-flex items-center;
+  }
+  /* BUTTON */
+  /* Root */
   .Button {
-    @apply inline-flex items-center;
+    @apply ButtonBase;
   }
+  /* Sizes */
   .ButtonMd {
-    @apply h-sm px-xs min-w-sm;
+    @apply h-sm min-w-sm rounded-md px-sm;
   }
+  /* Colors */
+  .ButtonBehance {
+    @apply TypographyBehance bg-blue-600/20 hover:bg-blue-600/40;
+  }
+  .ButtonLinkedIn {
+    @apply TypographyLinkedIn bg-sky-600/20 hover:bg-sky-600/40;
+  }
+  .ButtonGitHub {
+    @apply TypographyGitHub bg-slate-950/20 hover:bg-slate-950/40 dark:bg-slate-50/20 dark:hover:bg-slate-50/40;
+  }
+  .ButtonMedium {
+    @apply TypographyMedium bg-zinc-800/20 hover:bg-zinc-800/40 dark:bg-zinc-200/20 dark:hover:bg-zinc-200/40;
+  }
+  .ButtonMain {
+    @apply TypographyMain bg-amber-500/20 hover:bg-amber-500/40;
+  }
+  /* ICON */
+  /* Root */
   .Icon {
     @apply inline-flex fill-current;
   }
+  /* Sizes */
   .IconMd {
     @apply h-xs w-xs;
-  }
-}
-
-@layer utilities {
-  .text-behance {
-    @apply text-blue-600;
-  }
-  .text-linkedin {
-    @apply text-sky-600;
-  }
-  .text-github {
-    @apply text-slate-50;
-  }
-  .text-medium {
-    @apply text-zinc-200;
   }
 }
 
